# -*- mode: org -*-

* Unreleased

** New features

- New mode `magit-annex-unused-mode' provides an interface for browsing
  and managing unused files.
- New mode `magit-annex-list-mode' displays the output of
  'git annex list'.

** Other

- magit-annex has been updated for Magit version 2.1.0.

* 0.10.0

** Interface changes

- Use popup menu for annex commands. Annex push and merge commands are
  now under this menu.

** New features

- Add single-file content commands (copy, move, get, drop, unlock,
  lock). File choices are limited based on state of local repo.
- Add content commands for all files.
- Add ability to input git annex subcommands.
- Add ability to sync with specific remote.
- Hook up popup help with git annex manual.

* 0.9.0

** New features

- Add `git annex merge`.
- Add `git annex sync`.
- Add command to push git-annex branch (either along with the current
  branch or separately).